<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/snack_bar_decor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vocabulary_edit_name_text"/>
    
    <EditText
        android:id="@+id/vocabulary_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vocabulary_edit_translation_text"/>

    <EditText
        android:id="@+id/vocabulary_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <ImageView
        android:id="@+id/vocabulary_image_for_upload"
        android:layout_width="@dimen/edit_image_width"
        android:layout_height="@dimen/edit_image_height"
        android:contentDescription="@string/select_image_text"/>

    <!--<Button-->
        <!--android:id="@+id/upload_vocabulary_button"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="upload"/>-->

</LinearLayout>